<resources>
    <string name="app_name">Food Finder Beta</string>
    <string name="welcome">Welcome To Food Finder</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="confReg">Please Confirm the information</string>
    <string name="loggedin">Is this right?</string>
    <string name="url">Please enter URL</string>
    <string name="recommendation">Here is your recommendation</string>
    <string name="search">Search for a restaurant</string>
    <string name="ressearch">Restaurant Search</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Strings for LoggedIn class-->
    <string name="edit_profile">"Edit Profile"</string>
    <string name="get_ptp">"Taste Profile"</string>
    <string name="recommend_res">"Recommend a Restaurant"</string>
    <string name="restaurant_search">"Restaurants"</string>
    <string name="title_activity_edit_profile">EditProfile</string>

    <!--Strings for RestaurantsList class-->

</resources>
