<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adam.foodfinderbeta.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/welcome" />

    <Button
        android:id="@+id/mainRegister"
        android:layout_width="159dp"
        android:layout_height="54dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:onClick="register"
        android:text="@string/register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/register" />

    <Button
        android:id="@+id/mainLogin"
        android:layout_width="88dp"
        android:layout_height="49dp"
        android:layout_marginRight="8dp"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintBaseline_toBaselineOf="@+id/mainEmail"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/login" />

    <EditText
        android:id="@+id/mainEmail"
        android:layout_width="284dp"
        android:layout_height="47dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/prompt_email"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/mainRegister"
        app:layout_constraintRight_toLeftOf="@+id/mainLogin"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/url"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainEmail"
        app:layout_constraintVertical_bias="0.497"
        tools:text="@string/url" />

</android.support.constraint.ConstraintLayout>
